--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>2.4</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
@@ -106,7 +106,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0-beta-3</version>
+				<version>3.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -131,7 +131,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.3</version>
 				<executions>
 					<execution>
 						<id>assembly-project</id>
@@ -149,6 +149,18 @@
 					</descriptors>
 				</configuration>
 			</plugin>
+      <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.8.1</version>
+        <configuration>
+          <enableAssertions>true</enableAssertions>
+          <!-- 
+          <forkMode>never</forkMode> 
+          -->
+          <redirectTestOutputToFile>false</redirectTestOutputToFile>
+        </configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -161,7 +173,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.8</version>
+			<version>1.2.16</version>
 		</dependency>
 		<dependency>
 		  <groupId>javax.annotation</groupId>
@@ -242,12 +254,6 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>emma-maven-plugin</artifactId>
 				<version>1.0-alpha-3</version>
-				<inherited>true</inherited>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>surefire-report-maven-plugin</artifactId>
-				<version>2.0-beta-1</version>
 				<inherited>true</inherited>
 			</plugin>
 		</plugins>
